...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/product_image"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="Smart Electronic Toothbrush E1 colgate connect mas super test sdfs tol" />

    <TextView
      android:id="@+id/product_points"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dot_double"
      android:layout_marginEnd="@dimen/dot_double"
      android:text="@{item.formatPoints(context)}"
      android:textAppearance="?textAppearanceCaption"
      android:textColor="?textColorAccentSecondary"
      app:layout_constraintBottom_toTopOf="@+id/product_price"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/product_image"
      tools:text="1200 Points" />

    <TextView
      android:id="@+id/product_price"
...
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dot_double"
      android:layout_marginEnd="@dimen/dot_double"
      android:layout_marginBottom="@dimen/dot_double"
      android:text="@{item.textualPrice()}"
      android:textAppearance="?textAppearanceSubtitle2"
      app:layout_constraintBottom_toTopOf="@+id/product_quantity"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/product_image"
      tools:text="$120.95" />

    <TextView
      android:id="@+id/product_quantity"
...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/product_image"
      tools:text="3"
      tools:textColor="#454343" />

    <ImageView
      android:id="@+id/product_decrease"
      android:layout_width="@dimen/dot_six"
      android:layout_height="0dp"
      android:background="@drawable/ripple_rounded_left"
      android:onClick="@{() -> interaction.onDecreaseQuantityClick(item.product)}"
      android:padding="@dimen/dot"
      android:src="@drawable/ic_shop_remove"
...
      android:background="?colorBackgroundDark"
      app:layout_constraintBottom_toBottomOf="@id/product_decrease"
      app:layout_constraintStart_toEndOf="@id/product_decrease"
      app:layout_constraintTop_toTopOf="@id/product_decrease" />

    <ImageView
      android:id="@+id/product_increase"
      android:layout_width="@dimen/dot_six"
      android:layout_height="0dp"
      android:background="@drawable/ripple_rounded_right"
      android:onClick="@{() -> interaction.onIncreaseQuantityClick(item.product)}"
      android:padding="@dimen/dot"
      android:src="@drawable/ic_shop_add"
...
