...
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dot_double"
    android:layout_marginEnd="@dimen/dot_double"
    tools:theme="@style/AppTheme">

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/switch_use_smiles"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:checked="@{item.useSmiles}"
      android:enabled="@{item.isPossibleToUseSmiles}"
      android:onCheckedChanged="@{(_, checked) -> smilePointInteraction.onUseSmilesClick(checked)}"
      android:text="@{@string/cart_use_smile_points(item.potentialDiscountSmilePoints, item.potentialDiscountPrice)}"
      android:textAppearance="?textAppearanceHeadline6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="Use my 250 points (-$2.50)" />

...
      android:background="@color/divider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/switch_use_smiles" />

    <TextView
      android:id="@+id/points_discount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{item.actualDiscount}"
      android:textAppearance="?textAppearanceHeadline6"
      app:layout_constraintBottom_toBottomOf="@+id/points_discount_title"
      app:layout_constraintEnd_toEndOf="parent"
...
      android:textAppearance="?textAppearanceHeadline6"
      app:layout_constraintEnd_toStartOf="@id/points_discount"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/subtotal_title" />

    <TextView
      android:id="@+id/subtotal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dot_double"
      android:text="@{item.subtotal}"
      android:textAppearance="?textAppearanceHeadline6"
      android:textColor="?android:textColorTertiary"
...
