...
    <string name="settings_first_name">"first name"</string>
    <string name="dialog_lost_connection_title">"Connection lost"</string>
    <string name="dialog_lost_connection_description">"The connection with your toothbrush has been lost.
Wait for it to reconnect or restart your brushing session later."</string>
    <string name="dialog_lost_connection_quit_button">"Quit (and start again later)"</string>
    <string name="cart_undo_title">"Product deleted!"</string>
    <string name="cart_undo_action_title">"UNDO"</string>
    <string name="shop_web_payment_dialog_title">"Are you sure?"</string>
    <string name="shop_web_payment_dialog_content">"Quitting this page will cancel the on-going purchase"</string>
    <string name="shop_web_payment_dialog_positive">"Yes"</string>
    <string name="shop_web_payment_dialog_negative">"No"</string>
    <string name="shop_points">"%s Points"</string>
    <string name="cart_use_smile_points">"Use my %s points (-%s)"</string>
    <string name="shipment_taxes_estimation">"Estimate your shipment and taxes"</string>
    <string name="shop_discount_amount">"Save %s"</string>
    <string name="checkout_toolbar_title">"Shopping Cart"</string>
    <string name="cart_tolbar_title">"my shopping cart"</string>
    <string name="form_shipping_city_hint">"City"</string>
...
    <string name="shop_no_products">"No products are available"</string>
    <string name="cart_smiles_discount_applied">"Points applied discount"</string>
    <string name="cart_sub_total">"Subtotal"</string>
    <string name="form_shipping_address_title">"Shipping address"</string>
    <string name="please_wait">"Please wait"</string>
    <string name="shipping_billing_title">"shipping and billing"</string>
    <string name="shop_web_payment_toolbar_title">"Checkout"</string>
    <string name="frequency_card_title">"Frequency chart"</string>
    <string name="dialog_test_brushing_body">"Before you embark on your rewarding (literally) journey to better oral health, it’s important to see how you’re brushing naturally."</string>

    <!-- Please remember that this string needs to contain `dialog_test_brushing_headline_highlight` (like trailing fullstop) - otherwise highlight won't be rendered -->
    <string name="dialog_test_brushing_headline">"Skip the guesswork, and get the facts."</string>
    <string name="dialog_test_brushing_headline_highlight">"."</string>
...
